# etl-gen

./: README.md  pyproject.toml
etl_gen/: main.py
etl_gen/commands/: address.py  dateformat.py  float.py  ip.py  mixedJson.py  mixedhtml.py  mixedxml.py  ssn.py  tools.py
etl_gen/resources/: address_data  ip_table  mixed_address.txt
etl_gen/resources/address_data_xml/: 1.xml  13.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml
etl_gen/resources/html_list/: 1.html  10.html  100.html  103.html  106.html  109.html  11.html  110.html  112.html  114.html  115.html  116.html  119.html  12.html  120.html  124.html  126.html  128.html  13.html  134.html  138.html  139.html  14.html  140.html  141.html  142.html  143.html  147.html  148.html  149.html  15.html  151.html  152.html  156.html  159.html  16.html  163.html  165.html  17.html  170.html  (+96 more)
